FileUtilsTest: expand testListContents()
It now tests with and without recursion,
and with and without directory inclusion.